updated matcher to work with bintrees removed RedBlackTree from deps

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": "~v0.4.8"
   },
   "dependencies": {
+      "bintrees": ">= 0.0.3",
       "msgpack-0.4": ">= 0.1.4"
   },
   "devDependencies": {}
